@@ -86,6 +86,7 @@ Other contributors (alphabetically):
     Gregor Mueckl
     Alexander Murashko
     Samuel Nicholas
+    Leonid Onokhov
     Lucas Panian
     M Joonas Pihlaja
     Morteza Ramezanali
