@@ -156,6 +156,7 @@ Fixes, minor enhancements, and performance improvements:
     * channels() bugs were fixed when dealing with "deep" images. (1.6.3)
     * colorconvert() has been parallelized, and thus on most systems will
       now run much faster. (1.6.3)
+    * render_text() handles UTF-8 input. (1.6.3)
  * OpenEXR:
     * Improved handling of density and aspect ratio. #1042 (1.6.0)
     * Fix read_deep_tiles() error when not starting at the image origin.
@@ -244,7 +245,7 @@ Developer goodies / internals:
  * platform.h adds functions for runtime query of CPU capabilities. (1.6.3)
  * simd.h: float4 and int4 can now construct and load from unsigned short*,
    short*, unsigned char*, char*, and 'half'. (1.6.3)
-
+ * Strutil::utf8_to_unicode (1.6.3)
 
 
 Release 1.5.14 (10 April 2015) -- compared to 1.5.13)
